--- a/fullstack-javascript/sign-up-form/style.css
+++ b/fullstack-javascript/sign-up-form/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@600;700;800&display=swap');
 
 :root {
     --Gray900: #101828;
@@ -25,6 +25,7 @@ body {
 
 p:last-child {
     font-size: 0.8rem;
+    color: var(--Gray500);
 }
 
 a {
@@ -44,9 +45,14 @@ a {
     height: 100vh;
 }
 
+img {
+    display: none;
+}
+
 .form>p {
     color: var(--Gray500);
     font-weight: 400;
+    line-height: 1.5rem;
 }
 
 form {
@@ -68,7 +74,8 @@ fieldset {
 }
 
 h2 {
-    font-weight: 600;
+    font-weight: 700;
+    font-family: 'Sora', sans-serif;
 }
 
 label {
@@ -89,4 +96,51 @@ button {
     border: 1px solid var(--Primary600);
     border-radius: 8px;
     padding: 10px 18px;
+}
+
+@media (min-width: 1000px) {
+    main {
+        display: flex;
+    }
+
+    h1 {
+        font-weight: 800;
+        font-size: 3rem;
+        margin-top: 32px;
+        font-family: 'Sora', sans-serif;
+    }
+
+    .illustration {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 8px;
+        width: 35vw;
+    }
+
+    img {
+        display: block;
+        max-height: 100vh;
+        width: 50vw;
+        position: absolute;
+        left: -24px;
+    }
+
+    .form {
+        width: 65vw;
+        border-bottom-left-radius: 32px;
+        border-top-left-radius: 32px;
+        padding: 12%;
+        justify-content: center;
+        gap: 32px;
+    }
+
+    form {
+        gap: 32px;
+    }
+
+    button {
+        margin-right: auto;
+    }
 }
