--- a/fullstack-javascript/sign-up-form/style.css
+++ b/fullstack-javascript/sign-up-form/style.css
@@ -109,11 +109,8 @@ input:valid {
     background-color: var(--Primary25);
 }
 
-input:invalid{
+input:not(:placeholder-shown):not(:focus):invalid{
     border: 1px solid var(--Error300);
-}
-
-input:invalid:focus {
     box-shadow: 0 1px 2px rgba(16, 24, 40, 0.05), 0 0 0 4px var(--Error100);
 }
 
